@@ -16,6 +16,7 @@ depth: 1
 
  * Add custom permissions section to permissions documentation page (Dan Hayden)
  * Wagtail's documentation (v2.9 to v2.13) has been updated on [Dash user contributions](https://github.com/Kapeli/Dash-User-Contributions) for [Dash](https://kapeli.com/dash) or [Zeal](https://zealdocs.org/) offline docs applications (Damilola Oladele)
+ * Switch to using [Willow](https://github.com/wagtail/Willow/) instead of Pillow for images (Darrel O'Pry)
 
 ### Bug fixes
 
@@ -25,3 +26,8 @@ depth: 1
 
 ## Upgrade considerations
 
+### Wagtail-specific image field (`WagtailImageField`)
+
+The `AbstractImage` and `AbstractRendition` models use a Wagtail-specific `WagtailImageField` which extends Django's `ImageField` 
+to use [Willow](https://github.com/wagtail/Willow/) for image file handling. This will generate a new migration if you 
+are using a [custom image model](custom_image_model)
