@@ -1,0 +1,33 @@
+# Generated by Django 4.0.7 on 2022-08-10 16:26
+
+from django.db import migrations
+import wagtail.images.models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ("wagtailimages", "0024_index_image_file_hash"),
+    ]
+
+    operations = [
+        migrations.AlterField(
+            model_name="image",
+            name="file",
+            field=wagtail.images.models.WagtailImageField(
+                height_field="height",
+                upload_to=wagtail.images.models.get_upload_to,
+                verbose_name="file",
+                width_field="width",
+            ),
+        ),
+        migrations.AlterField(
+            model_name="rendition",
+            name="file",
+            field=wagtail.images.models.WagtailImageField(
+                height_field="height",
+                upload_to=wagtail.images.models.get_rendition_upload_to,
+                width_field="width",
+            ),
+        ),
+    ]
